dung-adding two more kasetsu endpoints, there is the need to create a time-series database like InfluxDB, to store the database from the sensor, and the MQTT subscriber to handle data storage actually
